--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNU4frXJtCUZEr/1cTsMiAs",
+      "authorship_tag": "ABX9TyNZjZvv/sQKUeD2q3kyt4iO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,7 +272,7 @@
         "          [7,8,9]]\n",
         "np.array(matriz)[:,1]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,14 +923,19 @@
         "Algunas librerías interesantes son las siguientes (junto con los códigos que suelen usarse para referenciarse):\n",
         "\n",
         "*   random\n",
-        "*   numpy (np)\n",
+        "*   numpy (np). Computación numérica\n",
         "*   scipy (sc)\n",
-        "*   sklearn (sk). De ésta también se pueden descargar datasets.\n",
+        "*   sklearn (sk). De ésta también se pueden descargar datasets. \n",
+        "*   scikit-learn\n",
+        "*   Tensorflow\n",
+        "*   keras\n",
+        "*   plotly\n",
         "*   matplotlib.pyplot (plt)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "*   matpltolib\n",
+        "*   matplotlib\n",
+        "*   seaborn\n",
+        "*   statmodels\n",
+        "*   pandas\n"
       ]
     },
     {
@@ -942,7 +947,7 @@
       "source": [
         "**Librería Numpy**\n",
         "\n",
-        ".array para crear un array\n",
+        ".array para crear un array. En Numpy trabaja con arrays que sería el equivalente a las listas de Python\n",
         "\n",
         ".transpose para transponer una matriz, aunque con .T también es válido\n",
         "\n",
@@ -971,7 +976,7 @@
         "\n",
         "np.array(matriz)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1009,7 @@
         "matriz_traspuesta = np.transpose(matriz)\n",
         "matriz_traspuesta"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,7 +1041,7 @@
       "source": [
         "matriz @ matriz_traspuesta"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,7 +1073,7 @@
       "source": [
         "np.ones(3)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1100,7 +1105,7 @@
         "matriz_nueva = [[1,5,3],[5,9,8],[8,9,7]]\n",
         "np.linalg.inv(matriz_nueva)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
