--- a/Mis_apuntes_sobre_Python.ipynb
+++ b/Mis_apuntes_sobre_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Mis apuntes sobre Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZjZvv/sQKUeD2q3kyt4iO",
+      "authorship_tag": "ABX9TyNTZnSw5Eh1brZ8OIeSo4Jn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1121,6 +1121,20 @@
           },
           "execution_count": 29
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yMiJV8hWTEuK",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Herramientas de análisis por explorar**\n",
+        "* Knime\n",
+        "* Weka\n",
+        "* Dataiku\n",
+        "* BigML"
       ]
     }
   ]
