--- a/notebooks/curso_machine_learning_juan_gabriel_gomila_salas.ipynb
+++ b/notebooks/curso_machine_learning_juan_gabriel_gomila_salas.ipynb
@@ -6,7 +6,7 @@
       "name": "curso-machine-learning-juan-gabriel-gomila-salas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+F3HFkXNS43dMho9GXEz7",
+      "authorship_tag": "ABX9TyOOD+H5JU/OhBbweHlrGXeU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,9 +52,10 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import sklearn as sk"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     }
   ]
