--- a/notebooks/t01_01_data_cleaning.ipynb
+++ b/notebooks/t01_01_data_cleaning.ipynb
@@ -6,7 +6,7 @@
       "name": "t01-01-data-cleaning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPpciN74r+vqkecxFg8pV2K",
+      "authorship_tag": "ABX9TyNJxKxW+lvMOgqMIskttJbR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2377,6 +2377,435 @@
         "      outfile1.write('\\n')\n"
       ],
       "execution_count": 124,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "75tue46aMB_V",
+        "colab_type": "text"
+      },
+      "source": [
+        "## LEER DATOS DESDE URL"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7vR1Fw-xMD8d",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "2a61cba8-5965-4ac4-ae24-68f75830ea66"
+      },
+      "source": [
+        "# con read_csv\n",
+        "medals_url = 'http://winterolympicsmedals.com/medals.csv'\n",
+        "medals_data = pd.read_csv(medals_url)\n",
+        "medals_data.head()"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Year</th>\n",
+              "      <th>City</th>\n",
+              "      <th>Sport</th>\n",
+              "      <th>Discipline</th>\n",
+              "      <th>NOC</th>\n",
+              "      <th>Event</th>\n",
+              "      <th>Event gender</th>\n",
+              "      <th>Medal</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Skating</td>\n",
+              "      <td>Figure skating</td>\n",
+              "      <td>AUT</td>\n",
+              "      <td>individual</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Silver</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Skating</td>\n",
+              "      <td>Figure skating</td>\n",
+              "      <td>AUT</td>\n",
+              "      <td>individual</td>\n",
+              "      <td>W</td>\n",
+              "      <td>Gold</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Skating</td>\n",
+              "      <td>Figure skating</td>\n",
+              "      <td>AUT</td>\n",
+              "      <td>pairs</td>\n",
+              "      <td>X</td>\n",
+              "      <td>Gold</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Bobsleigh</td>\n",
+              "      <td>Bobsleigh</td>\n",
+              "      <td>BEL</td>\n",
+              "      <td>four-man</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Bronze</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Ice Hockey</td>\n",
+              "      <td>Ice Hockey</td>\n",
+              "      <td>CAN</td>\n",
+              "      <td>ice hockey</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Gold</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Year      City       Sport  ...       Event Event gender   Medal\n",
+              "0  1924  Chamonix     Skating  ...  individual            M  Silver\n",
+              "1  1924  Chamonix     Skating  ...  individual            W    Gold\n",
+              "2  1924  Chamonix     Skating  ...       pairs            X    Gold\n",
+              "3  1924  Chamonix   Bobsleigh  ...    four-man            M  Bronze\n",
+              "4  1924  Chamonix  Ice Hockey  ...  ice hockey            M    Gold\n",
+              "\n",
+              "[5 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hQovnBhPMaRr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cb2db777-9e55-4aef-f3ff-c0686381a6f5"
+      },
+      "source": [
+        "# con urllib3\n",
+        "import urllib3\n",
+        "http = urllib3.PoolManager()\n",
+        "r = http.request('GET', medals_url)\n",
+        "print(r.status)\n",
+        "response = r.data"
+      ],
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "200\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TvYnSJuAPS7P",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# con csv\n",
+        "import csv\n",
+        "cr = csv.reader(response)"
+      ],
+      "execution_count": 186,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TIGPxZDVQgJ5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        },
+        "outputId": "dd5f9dfe-47fd-4b2e-a12f-def147ae588b"
+      },
+      "source": [
+        "data_as_array = response.decode(\"utf-8\").strip().split('\\n')\n",
+        "columns = data_as_array[0].split(',')\n",
+        "num_cols = len(columns)\n",
+        "dict_of_medals = {}\n",
+        "for col in columns:\n",
+        "  dict_of_medals[col] = []\n",
+        "\n",
+        "counter = 0\n",
+        "for line in data_as_array:\n",
+        "  values = line.split(',')\n",
+        "  for i in range(len(columns)):\n",
+        "    dict_of_medals[columns[i]].append(values[i])\n",
+        "  counter += 1\n",
+        "\n",
+        "df = pd.DataFrame(dict_of_medals)\n",
+        "df"
+      ],
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Year</th>\n",
+              "      <th>City</th>\n",
+              "      <th>Sport</th>\n",
+              "      <th>Discipline</th>\n",
+              "      <th>NOC</th>\n",
+              "      <th>Event</th>\n",
+              "      <th>Event gender</th>\n",
+              "      <th>Medal</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Year</td>\n",
+              "      <td>City</td>\n",
+              "      <td>Sport</td>\n",
+              "      <td>Discipline</td>\n",
+              "      <td>NOC</td>\n",
+              "      <td>Event</td>\n",
+              "      <td>Event gender</td>\n",
+              "      <td>Medal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Skating</td>\n",
+              "      <td>Figure skating</td>\n",
+              "      <td>AUT</td>\n",
+              "      <td>individual</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Silver</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Skating</td>\n",
+              "      <td>Figure skating</td>\n",
+              "      <td>AUT</td>\n",
+              "      <td>individual</td>\n",
+              "      <td>W</td>\n",
+              "      <td>Gold</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Skating</td>\n",
+              "      <td>Figure skating</td>\n",
+              "      <td>AUT</td>\n",
+              "      <td>pairs</td>\n",
+              "      <td>X</td>\n",
+              "      <td>Gold</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1924</td>\n",
+              "      <td>Chamonix</td>\n",
+              "      <td>Bobsleigh</td>\n",
+              "      <td>Bobsleigh</td>\n",
+              "      <td>BEL</td>\n",
+              "      <td>four-man</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Bronze</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2307</th>\n",
+              "      <td>2006</td>\n",
+              "      <td>Turin</td>\n",
+              "      <td>Skiing</td>\n",
+              "      <td>Snowboard</td>\n",
+              "      <td>USA</td>\n",
+              "      <td>Half-pipe</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Silver</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2308</th>\n",
+              "      <td>2006</td>\n",
+              "      <td>Turin</td>\n",
+              "      <td>Skiing</td>\n",
+              "      <td>Snowboard</td>\n",
+              "      <td>USA</td>\n",
+              "      <td>Half-pipe</td>\n",
+              "      <td>W</td>\n",
+              "      <td>Gold</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2309</th>\n",
+              "      <td>2006</td>\n",
+              "      <td>Turin</td>\n",
+              "      <td>Skiing</td>\n",
+              "      <td>Snowboard</td>\n",
+              "      <td>USA</td>\n",
+              "      <td>Half-pipe</td>\n",
+              "      <td>W</td>\n",
+              "      <td>Silver</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2310</th>\n",
+              "      <td>2006</td>\n",
+              "      <td>Turin</td>\n",
+              "      <td>Skiing</td>\n",
+              "      <td>Snowboard</td>\n",
+              "      <td>USA</td>\n",
+              "      <td>Snowboard Cross</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Gold</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2311</th>\n",
+              "      <td>2006</td>\n",
+              "      <td>Turin</td>\n",
+              "      <td>Skiing</td>\n",
+              "      <td>Snowboard</td>\n",
+              "      <td>USA</td>\n",
+              "      <td>Snowboard Cross</td>\n",
+              "      <td>W</td>\n",
+              "      <td>Silver</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2312 rows × 8 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      Year      City      Sport  ...            Event  Event gender   Medal\n",
+              "0     Year      City      Sport  ...            Event  Event gender   Medal\n",
+              "1     1924  Chamonix    Skating  ...       individual             M  Silver\n",
+              "2     1924  Chamonix    Skating  ...       individual             W    Gold\n",
+              "3     1924  Chamonix    Skating  ...            pairs             X    Gold\n",
+              "4     1924  Chamonix  Bobsleigh  ...         four-man             M  Bronze\n",
+              "...    ...       ...        ...  ...              ...           ...     ...\n",
+              "2307  2006     Turin     Skiing  ...        Half-pipe             M  Silver\n",
+              "2308  2006     Turin     Skiing  ...        Half-pipe             W    Gold\n",
+              "2309  2006     Turin     Skiing  ...        Half-pipe             W  Silver\n",
+              "2310  2006     Turin     Skiing  ...  Snowboard Cross             M    Gold\n",
+              "2311  2006     Turin     Skiing  ...  Snowboard Cross             W  Silver\n",
+              "\n",
+              "[2312 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 189
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CcRu6SZTUYyJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## FICHEROS XLS Y XLSX"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AKlYVpTfUcUz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#importación de librerías\n",
+        "import pandas as pd\n",
+        "from google.colab import files\n",
+        "\n",
+        "#lectura de datos\n",
+        "data_XLS  = pd.read_excel('/content/titanic3.xls')\n",
+        "data_XLSX = pd.read_excel('/content/titanic3.xlsx')\n",
+        "\n",
+        "data_XLS.to_csv('/content/titanic3_custom.csv')\n"
+      ],
+      "execution_count": 198,
       "outputs": []
     }
   ]
