--- a/notebooks/t01_02_data_cleaning_análisis_preliminar_de_los_datos.ipynb
+++ b/notebooks/t01_02_data_cleaning_análisis_preliminar_de_los_datos.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMVzG1VexrlhMBsj3EiyQKH",
+      "authorship_tag": "ABX9TyNHBoKPoeD1/qvfznj3DJL4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#RESUMEN DE LOS DATOS, DIMENSIONES Y ESTRUCTURAS"
+        "#DATOS, DIMENSIONES Y ESTRUCTURAS"
       ]
     },
     {
@@ -453,7 +453,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# RESUMEN DE ESTADÍSTICOS BÁSICOS DE LAS VARIABLES NUMÉRICAS"
+        "# ESTADÍSTICOS BÁSICOS"
       ]
     },
     {
@@ -650,6 +650,188 @@
             "tags": []
           },
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ym0qvg9o_T0B",
+        "colab_type": "text"
+      },
+      "source": [
+        "# MISSING VALUES"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "42rfD6Jb_Yo_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        },
+        "outputId": "70ed9d17-e43f-4676-ef48-833fa599b54e"
+      },
+      "source": [
+        "pd.isnull(data['body']) # valores nulos en el campo body"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        True\n",
+              "1        True\n",
+              "2        True\n",
+              "3       False\n",
+              "4        True\n",
+              "        ...  \n",
+              "1304    False\n",
+              "1305     True\n",
+              "1306    False\n",
+              "1307     True\n",
+              "1308     True\n",
+              "Name: body, Length: 1309, dtype: bool"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a7RnIc_cAYW3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 218
+        },
+        "outputId": "866d551d-c37b-47d6-97be-7893072ab4ff"
+      },
+      "source": [
+        "pd.notnull(data['body']) # valores no nulos en el campo body"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       False\n",
+              "1       False\n",
+              "2       False\n",
+              "3        True\n",
+              "4       False\n",
+              "        ...  \n",
+              "1304     True\n",
+              "1305    False\n",
+              "1306     True\n",
+              "1307    False\n",
+              "1308    False\n",
+              "Name: body, Length: 1309, dtype: bool"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yIq45c97Aq7G",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ca935a9e-7d37-41ff-f76b-3af6060dc658"
+      },
+      "source": [
+        "pd.isnull(data['body']).values # valores nulos, convertido en array"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True, ..., False,  True,  True])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MtfXTZB5Avwc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2f783191-f883-434d-efad-a4e01b7ec15c"
+      },
+      "source": [
+        "pd.isnull(data['body']).values.ravel().sum() # suma de Trues, porque True = 1 y False = 0. ravel es como un flatten"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1188"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2EkblZbmBXW-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dd8e36fd-b9b0-4a15-f794-08e8963cbf4c"
+      },
+      "source": [
+        "pd.notnull(data['body']).values.ravel().sum() # suma de los no nulos, que coincide con lo indicado en describe()"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "121"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
         }
       ]
     }
