--- a/notebooks/t05_02_logistic_regression_implementación.ipynb
+++ b/notebooks/t05_02_logistic_regression_implementación.ipynb
@@ -64,7 +64,7 @@
         "    total_sum = total_sum * sum_in[i]\n",
         "  return total_sum "
       ],
-      "execution_count": 62,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "      pi[i] = 1/(1+np.exp(-exponente[i]))\n",
         "  return pi"
       ],
-      "execution_count": 63,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
         "    W[i,i].astype(float)\n",
         "  return W"
       ],
-      "execution_count": 64,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
         "    ll = likelihold(Y, pi)\n",
         "  return beta"
       ],
-      "execution_count": 65,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 66,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -222,13 +222,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 185
         },
-        "outputId": "55d2bb18-5da8-41b4-8e8d-21e7e20652b5"
+        "outputId": "34acbb8b-7235-4011-e607-752d2b9a2b16"
       },
       "source": [
         "X = np.array(range(10)).reshape(10,1)\n",
         "X"
       ],
-      "execution_count": 67,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +249,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 6
         }
       ]
     },
@@ -262,13 +262,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "69a421f0-2d18-4ec7-85a8-975a1d906050"
+        "outputId": "1737d3cb-8adb-43be-d598-1bc7aa1b71e0"
       },
       "source": [
         "Y = [0,0,0,0,1,0,1,0,1,1]\n",
         "Y"
       ],
-      "execution_count": 68,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 7
         }
       ]
     },
@@ -293,14 +293,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 185
         },
-        "outputId": "7d07dcbe-1f67-431c-95a3-41940c22c8e8"
+        "outputId": "c5490db5-130d-4e2c-fa71-25e348232071"
       },
       "source": [
         "bias = np.ones(10).reshape(10,1)\n",
         "X_new = np.append(X,bias, axis = 1)\n",
         "X_new"
       ],
-      "execution_count": 69,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 8
         }
       ]
     },
@@ -334,13 +334,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "0db3ebd7-5a46-4ab3-980c-effefcacfb04"
+        "outputId": "b640be9a-4406-4f51-c251-d3c0097cb751"
       },
       "source": [
         "a = logistics(X,Y,0.00001)\n",
         "a"
       ],
-      "execution_count": 70,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,7 +519,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 70
+          "execution_count": 9
         }
       ]
     },
@@ -544,13 +544,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "aba68252-23c0-429b-8a84-d1709a5231b7"
+        "outputId": "7994bb9d-578a-44b0-f82a-d222bc8ce87e"
       },
       "source": [
         "ll = likelihold(Y,logitprobs(X,a))\n",
         "ll"
       ],
-      "execution_count": 71,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +562,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 10
         }
       ]
     },
@@ -581,13 +581,26 @@
       "metadata": {
         "id": "-Kcs_gNKMVTq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "a834b6aa-52f1-4fc9-866f-19dd55497675"
       },
       "source": [
         "import statsmodels.api as sm"
       ],
-      "execution_count": 74,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -598,14 +611,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "6ea38b99-b2c0-46de-e780-165573624b6e"
+        "outputId": "dd8dcf07-19cb-4803-c06d-94f44291d580"
       },
       "source": [
         "logitmodel = sm.Logit(Y,X_new)\n",
         "result = logitmodel.fit()\n",
         "result"
       ],
-      "execution_count": 75,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,13 +633,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<statsmodels.discrete.discrete_model.BinaryResultsWrapper at 0x7f81d9cb7160>"
+              "<statsmodels.discrete.discrete_model.BinaryResultsWrapper at 0x7ffb8a051b70>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 12
         }
       ]
     },
@@ -639,12 +652,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 269
         },
-        "outputId": "92636e76-eb20-40fa-aceb-aa3338b768e9"
+        "outputId": "e3f6bc42-2821-4652-edcd-118f8a93eaa1"
       },
       "source": [
         "print(result.summary())"
       ],
-      "execution_count": 76,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,8 +667,8 @@
             "Dep. Variable:                      y   No. Observations:                   10\n",
             "Model:                          Logit   Df Residuals:                        8\n",
             "Method:                           MLE   Df Model:                            1\n",
-            "Date:                Sat, 29 Aug 2020   Pseudo R-squ.:                  0.3596\n",
-            "Time:                        07:51:34   Log-Likelihood:                -4.3101\n",
+            "Date:                Mon, 31 Aug 2020   Pseudo R-squ.:                  0.3596\n",
+            "Time:                        06:36:21   Log-Likelihood:                -4.3101\n",
             "converged:                       True   LL-Null:                       -6.7301\n",
             "Covariance Type:            nonrobust   LLR p-value:                   0.02781\n",
             "==============================================================================\n",
